--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,9 @@
 <html>
   <head>
-    <title>Angular 2 QuickStart</title>
+    <title>TFS Pull Requests</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- 1. Load libraries -->
-     <!-- Polyfill(s) for older browsers -->
-    <script src="../node_modules/core-js/client/shim.min.js"></script>
     <script src="../node_modules/zone.js/dist/zone.js"></script>
     <script src="../node_modules/reflect-metadata/Reflect.js"></script>
     <script src="../node_modules/systemjs/dist/system.src.js"></script>
