--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,10 @@
     <title>TFS Pull Requests</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link href="../node_modules/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
+    <link href="../node_modules/font-awesome/css/font-awesome.css" rel="stylesheet">
+    <link href="assets/css/styles.css" rel="stylesheet">
     <!-- 1. Load libraries -->
     <script src="../node_modules/zone.js/dist/zone.js"></script>
     <script src="../node_modules/reflect-metadata/Reflect.js"></script>
