--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     <script src="../node_modules/zone.js/dist/zone.js"></script>
     <script src="../node_modules/reflect-metadata/Reflect.js"></script>
     <script src="../node_modules/systemjs/dist/system.src.js"></script>
+    <script src="../node_modules/es6-shim/es6-shim.js"></script>
     <!-- 2. Configure SystemJS -->
     <script src="systemjs.config.js"></script>
     <script>
