--- a/src/index.html
+++ b/src/index.html
@@ -7,18 +7,15 @@
     <link href="../node_modules/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
     <link href="../node_modules/font-awesome/css/font-awesome.css" rel="stylesheet">
     <link href="assets/css/styles.css" rel="stylesheet">
-    <!-- 1. Load libraries -->
+
     <script src="../node_modules/zone.js/dist/zone.js"></script>
     <script src="../node_modules/reflect-metadata/Reflect.js"></script>
     <script src="../node_modules/systemjs/dist/system.src.js"></script>
     <script src="../node_modules/es6-shim/es6-shim.js"></script>
-    <!-- 2. Configure SystemJS -->
-    <script src="systemjs.config.js"></script>
-    <script>
-      System.import('app').catch(function(err){ console.error(err); });
-    </script>
+
+    <script src="app/app.bundle.js"></script>
   </head>
-  <!-- 3. Display the application -->
+
   <body>
     <my-app>Loading...</my-app>
   </body>
