--- a/src/index.html
+++ b/src/index.html
@@ -4,15 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link href="../node_modules/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
-    <link href="../node_modules/font-awesome/css/font-awesome.css" rel="stylesheet">
+    <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link href="vendor/font-awesome/css/font-awesome.css" rel="stylesheet">
     <link href="assets/css/styles.css" rel="stylesheet">
 
-    <script src="../node_modules/zone.js/dist/zone.js"></script>
-    <script src="../node_modules/reflect-metadata/Reflect.js"></script>
-    <script src="../node_modules/systemjs/dist/system.src.js"></script>
-    <script src="../node_modules/es6-shim/es6-shim.js"></script>
-
+    <script src="vendor/vendor.bundle.js"></script>
     <script src="app/app.bundle.js"></script>
   </head>
 
