add package task to create tfs extension vsix

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,10 @@
+<!DOCTYPE html>
 <html>
   <head>
     <title>TFS Pull Requests</title>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/png" href="assets/images/logo.png">
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
