--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,8 @@
     <link href="vendor/font-awesome/css/font-awesome.css" rel="stylesheet">
     <link href="assets/css/styles.css" rel="stylesheet">
 
-    <script src="vendor/vendor.bundle.js"></script>
-    <script src="app/app.bundle.js"></script>
+    <script src="vendor/vendor.bundle.min.js"></script>
+    <script src="app/app.bundle.min.js"></script>
   </head>
 
   <body>
