first pass at settings to change date format
update layout

default date format doesn't include seconds

remove dev settings

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,8 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="assets/css/styles.css" rel="stylesheet">
 
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="vendor/vendor.bundle.min.js"></script>
     <!-- build:remove -->
     <script src="system.config.js"></script>
