final (?) layout changes

--- a/src/configuration.html
+++ b/src/configuration.html
@@ -44,7 +44,9 @@
     <body>
         <div class="widget-configuration">
             <div class="dropdown">
-                <label>Pull Request Category</label>
+                <div class="configuration-label-container">
+                    <label>Pull Request Category</label>
+                </div>
                 <div class="wrapper">
                     <select id="pr-category-dropdown">
                         <option value="requestedByMe">Requested By Me</option>
